# Gray-Scott-Kokkos

./: CMakeLists.txt  README.md  gray-scott.cpp  gray-scott.h  gs-settings.json  main.cpp  performance.md  restart.cpp  restart.h  settings.cpp  settings.h  settings.hpp  writer.cpp  writer.h
